# ZZZ-Computer-Science-Course

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  deadlines.yml
.github/workflows/: ci.yml
Cmake/: BuildFlags.cmake
docs/: ci.md  links.md  readme.md  setup.md  с_style.md
examples/: CMakeLists.txt
examples/Regex/: CMakeLists.txt  OLd.c  fsm.c  fsm.cpp  fsm.h  main.c  main.cpp  shared_header.h  state.h
tasks/: CMakeLists.txt  readme.md
tasks/bitsets/: readme.md  variants.md
tasks/bitsets/tasks/: CMakeLists.txt
tasks/bitsets/tasks/1/: CMakeLists.txt  readme.md
tasks/bitsets/tasks/10/: CMakeLists.txt  readme.md
tasks/finite_state_machine/: readme.md  variants.md
tasks/finite_state_machine/tasks/: CMakeLists.txt
tasks/geometry/: readme.md  variants.md
tasks/geometry/tasks/: CMakeLists.txt
tasks/integers/: readme.md  variants.md
tasks/integers/tasks/: CMakeLists.txt
tasks/latex/: readme.md  variants.md
tasks/linerization/: readme.md  variants.md
tasks/linux/: readme.md  variants.md
tasks/matrix/: readme.md  variants.md
tasks/matrix/tasks/: CMakeLists.txt
tasks/nam/: readme.md  variants.md
tasks/numerical_methods/: readme.md  variants.md
tasks/numerical_methods/tasks/: CMakeLists.txt
tasks/taylor/: readme.md  variants.md
tasks/turing_diagrams/: readme.md  variants.md
tasks/turing_machine/: readme.md  variants.md
tasks/turing_machine/tasks/: 50_MT_MGlebova
tools/: config.yaml  generator.py  run_linter.sh  students.txt
tools/data/: 11.txt  12.txt  13.txt  15.txt  5.txt  6.txt  7.txt
(+999 files in other folders)
